--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   
   <servlet-mapping>
     <servlet-name>MainController</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern></url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
