--- a/mysite02/pom.xml
+++ b/mysite02/pom.xml
@@ -22,6 +22,13 @@
     		<version>2.7.2</version>
 		</dependency>
 		
+
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
   	</dependencies>
 	
 
