--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,14 @@
     <servlet-name>UserController</servlet-name>
     <url-pattern>/user</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>GuestbookController</display-name>
+    <servlet-name>GuestbookController</servlet-name>
+    <servlet-class>com.bitacademy.mysite.controller.GuestbookController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GuestbookController</servlet-name>
+    <url-pattern>/gb</url-pattern>
+  </servlet-mapping>
 </web-app>
