--- a/mysite03/src/main/webapp/WEB-INF/web.xml
+++ b/mysite03/src/main/webapp/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 	
 	<!-- Context Parameters -->
 	<context-param>
-    	<param-name> contextConfigLocation </param-name>
-     	<param-value>/WEB-INF/applicationContext.xml</param-value>
-	</context-param> 
+	     <param-name>contextConfigLocation</param-name>
+	     <param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param> 	
 	
 	<!-- Context Load Listener -->
 	<listener>
-    	<listener-class> org.springframework.web.context.ContextLoaderListener </listener-class>
+	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
 	<!-- Encoding Filter -->
@@ -29,19 +29,17 @@
 		<filter-name>EncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<!-- Dispath Servlet -->
+
+	<!-- Dispatcher Servlet -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
-
+		
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
