--- a/mysite03/src/main/webapp/WEB-INF/web.xml
+++ b/mysite03/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,15 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-		
+	
+	<!-- Common Error Page -->
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB_INF/views/error/500.jsp</location>
+	</error-page>
+	
+	
+	<!-- Welcome File List -->	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
