--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -52,6 +52,20 @@
 		    <artifactId>mariadb-java-client</artifactId>
 		    <version>2.7.2</version>
 		</dependency>
+	
+	<!-- MyBatis -->
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis</artifactId>
+		<version>3.2.2</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis-spring</artifactId>
+		<version>1.2.0</version>
+	</dependency>
+	
 
 	<!-- jtlel -->
 		<dependency>
