--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -13,76 +13,93 @@
 		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
 		<maven.compiler.source>12</maven.compiler.source>
 		<maven.compiler.target>12</maven.compiler.target>
-		<org.springframework-version>4.3.3.RELEASE</org.springframework-version>
+		<org.springframework-version>5.3.18</org.springframework-version>
+		<jcloverslf4j.version>1.7.6</jcloverslf4j.version>
+		<logback.version>1.1.1</logback.version>
 	</properties>
 	
 	<dependencies>
-	<!-- Spring Context(Container) -->
+		<!-- Spring Context(Container) -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context</artifactId>
 		    <version>${org.springframework-version}</version>
-		</dependency>
-		
-	<!-- Spring MVC -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${org.springframework-version}</version>
+		    <!-- JCL 제외 -->
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>		
-		
-	<!-- Spring Web -->
+
+		<!-- Spring MVC -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${org.springframework-version}</version>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-webmvc</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>		
+	
+		<!-- Spring Web -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
+		    <version>${org.springframework-version}</version>
 		</dependency>
 		
-	<!-- Spring JDBC -->
+		<!-- Spring JDBC -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>${org.springframework-version}</version>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>${org.springframework-version}</version>
 		</dependency>
-		
-	<!-- Apache common DBCP  -->
+				
+		<!-- Apache Common DBCP -->
 		<dependency>
-    		<groupId>commons-dbcp</groupId>
-    		<artifactId>commons-dbcp</artifactId>
-    		<version>1.4</version>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
 		</dependency>
-		
-	<!-- mariaDB -->
+
+		<!-- mariadb jdbc driver -->
 		<dependency>
 		    <groupId>org.mariadb.jdbc</groupId>
 		    <artifactId>mariadb-java-client</artifactId>
 		    <version>2.7.2</version>
 		</dependency>
-	
-	<!-- MyBatis -->
-	<dependency>
-		<groupId>org.mybatis</groupId>
-		<artifactId>mybatis</artifactId>
-		<version>3.2.2</version>
-	</dependency>
-
-	<dependency>
-		<groupId>org.mybatis</groupId>
-		<artifactId>mybatis-spring</artifactId>
-		<version>1.2.0</version>
-	</dependency>
-	
-
-	<!-- jtlel -->
+						
+		<!-- MyBatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+						
+		<!-- jstl -->
 		<dependency>
 		    <groupId>jstl</groupId>
 		    <artifactId>jstl</artifactId>
 		    <version>1.2</version>
-		</dependency>
-		
-  	</dependencies>
+		</dependency>			
 	
-
+		<!-- Logback -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${jcloverslf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>	
+	</dependencies>
+		
 	<build>
 		<finalName>mysite03</finalName>
 		<plugins>
@@ -92,8 +109,5 @@
 				<version>3.3.2</version>
 			</plugin>
 		</plugins>
-	</build>
-
-	
-		
+	</build>	
 </project>
