--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -47,6 +47,19 @@
 		    <version>${org.springframework-version}</version>
 		</dependency>
 		
+	<!-- Common Fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		
 		<!-- Spring JDBC -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
