--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -47,6 +47,13 @@
 		    <version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- spring aspect -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
 	<!-- Common Fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
