--- a/mysite04/src/main/webapp/WEB-INF/web.xml
+++ b/mysite04/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,7 @@
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
-			<param-name>contextClass/param-name</param-name>
+			<param-name>contextClass</param-name>
 			<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
 		</init-param>
 		<init-param>
