--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -3,6 +3,7 @@
 	<groupId>com.bitacademy</groupId>
 	<artifactId>mysite03</artifactId>
 	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
