--- a/mysite04/src/main/webapp/WEB-INF/web.xml
+++ b/mysite04/src/main/webapp/WEB-INF/web.xml
@@ -57,6 +57,10 @@
 		<error-code>500</error-code>
 		<location>/WEB-INF/views/error/500.jsp</location>
 	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/error/404.jsp</location>
+	</error-page>
 	
 	<!-- Welcome File List -->	
 	<welcome-file-list>
