--- a/mysite05/pom.xml
+++ b/mysite05/pom.xml
@@ -9,10 +9,11 @@
 		<!-- 레포지토리에서 부모 검색 -->
 		<relativePath /> 
 	</parent>
-	
+		
 	<groupId>com.bitacademy</groupId>
 	<artifactId>mysite05</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>	
@@ -31,19 +32,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 		<!-- Spring Boot AOP Starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-		
+
 		<!-- Spring Boot Validation Starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-		
+
 		<!-- common fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -63,13 +64,13 @@
 			<version>2.2.0</version>
 		</dependency>
 		
-		<!-- Mariadb jdbc driver -->
+		<!-- Mariadb JDBC Driver -->
 		<dependency>
 		    <groupId>org.mariadb.jdbc</groupId>
 		    <artifactId>mariadb-java-client</artifactId>
-		    <version>2.7.2</version>
-		</dependency>
-			
+		    <version>2.7.2</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>		
+		
 		<!-- JSTL -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
@@ -87,8 +88,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>		
-				
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -99,6 +99,5 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
-	
+	</build>	
 </project>
